--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
-DSN="postgres://user:password@hostname:port/database-name"
+DB_USER=
+DB_PASSWORD=
+DB_HOST=
+DB_PORT=
+DB_NAME=
 SECRET=random-32-character-hexadecimal-string
